--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -131,6 +131,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "capstone-frontend"
+    }
+  },
+  "defaultProject": "capstone-frontend",
+  "cli": {
+    "analytics": "afad2e75-34ec-41c9-a176-ed462a6ba452"
+  }
 }
